# zerostart

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  cli.py  config.json  documentation_setup.md  flake8.ini  grok-last-attemp.md  mypi.ini  mypy.ini  project-rules.md  project_structure.md  pylint.ini  pyproject.toml  pyproject.toml.bak  pytest.ini  ruff.ini  ruff.toml  teardown.sh  zerostart-config.json  zerostart-init.sh  zerostart_init.sh
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  requirements-docs.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: index.doctree
docs/_build/doctrees/guides/: getting_started.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/demo/: app.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/guides/: getting_started.rst.txt
docs/_build/html/api/: index.html
docs/_build/html/guides/: getting_started.html
docs/api/: core.rst  index.rst  utils.rst
docs/examples/: advanced.rst  basic.rst  index.rst
docs/guides/: architecture.rst  getting_started.rst
docs/source/: conf.py  index.rst
scripts/: _colors.sh  generate_config.sh  generate_filesystem.sh  generate_poetry_requirements.sh  generate_project_files.sh  generate_requirements.sh  generate_source.sh  generate_tests.sh  header.sh  install_core.sh  install_database.sh  install_dev.sh  install_documentation.sh  install_game.sh  install_main.sh  install_math.sh  install_packages.sh  install_poetry.sh  install_python.sh  install_security.sh  install_sphinx.sh  install_test.sh  protect_docstrings.py  publish.sh  quality_checks.sh  run_all_checks.sh  run_app.sh  run_tests.sh  setup_game.sh  setup_game.sh.sh  setup_precommit.sh  teardown.sh  terminal_ui.sh  verify_imports.sh  verify_install.sh  verify_structure.sh  zerostart.sh  zerostart_init_classic.sh
scripts/classic/: README.md  generate_tests.sh  header.sh  install_database.sh  install_documentation.sh  install_game.sh  install_math.sh  install_python.sh  install_security.sh  install_test.sh  run_app.sh  run_tests.sh  setup_game.sh
scripts/config/: .pre-commit-config.yml
scripts/poetry/: generate_requirements.sh  install_poetry.sh  myproject.toml
scripts/requirements_txt/: generate_source.sh  install_main.sh
scripts/setup/: copy_configs.sh  setup_core.sh
src/: app.py  game_launcher.py  main.py  utils.py
src/demo/: app.py
src/game/: game.py
src/game/engine/: entity.py  game_loop.py
src/game/ui/: terminal_ui.py
src/omega_project/: __init__.py  main.py
src/omega_project/shared/: __init__.py  types.py
tests/: __init__.py  test_standards.py
tests/game/: test_game_engine.py
tests/unit/: test_app.py  test_greeting.py  test_main.py  test_standards.py
