[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zerostart"
version = "0.1.0"
description = "Clean-slate Python project template"
authors = ["Jesse Naiman <jessenaiman@gmail.com>"]
readme = "README.md"
packages = [{ include = "zerostart", from = "src" }]

[tool.poetry.scripts]
zerostart = "zerostart.cli:app"

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"
bandit = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest-cov = "*"
hypothesis = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
myst-parser = "*"
sphinx-autobuild = "*"

[tool.poetry.group.game.dependencies]
arcade = "*"
pyglet = "*"

[tool.poetry.group.database.dependencies]
sqlalchemy = "*"

[tool.poetry.group.math.dependencies]
numpy = "*"
