[project]
name = "zerostart"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesse Naiman",email = "jessenaiman@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.3"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-docstrings = "^1.7.0"
pre-commit = "^4.2.0"
ipdb = "^0.13.13"
debugpy = "^1.8.13"
rich = "^14.0.0"
loguru = "^0.7.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
hypothesis = "^6.130.8"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"

